# TrackerPy

./: .env_template  .gitignore  README.md  bot.py  pyproject.toml  requirements.txt  run.sh
cogs/: Group.py  Task.py  Track.py  User.py
core/classes/: DB.py
